2014-03-30  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Improve: allele frequency calculation is faster

	* Improve: faster calculation of covariance in "--meta" models

2014-03-26  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Improve: for "--meta recessive" model, output PVALUE = NA instead of 1 at monomorphic sites
	* Improve: frequency filtering for dosage and genotype
	* Change: Pvalue header for burden tests are now "Pvalue"

2014-03-25  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Improve: greatly improve the speed for cov,dominant and recessive models

>>>>>>> 94af5795688b69b4819d3ab56b0e5722720dd6a9

	* Fix: MetaCov model now have the correct suffix

2014-02-28  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Change: for dominant/recessive model, automatically generate covariance

2014-02-27  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Change: for X chrom, also use male to get AF
	* Support generating covariance matrix for dominant/recessive model
	* Change now, by default, rvtests drops samples with missing covariates (to resume previous behavior, imputing to the mean, use --imputeCov). 
	
2014-02-20  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Revise --useResidualAsPhenotype, now regress out intercept by default

2014-02-11  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Fix bug in MetaCov outputs

2013-11-26  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Support X chromosome analysis

2013-05-03  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Change frequency cutoff to minor allele frequency cutoffs when using --freqLower / --freqUpper

2013-04-30  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Add conditional analysis
	* Add family burden tests
